--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 5th</h1>
-            <h3>Week 19 Day 4 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 6th</h1>
+            <h3>Week 19 Day 5 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is one thing you really like and one thing you 
-                            really dislike about WordPress so far?
+                            If you had to choose, would you pick extreme cold? or extreme heat?
+
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container">
                         <img 
-                            src="images/overthinking.webp"
-                            alt="overthinking"
+                            src="images/procrastination.webp"
+                            alt="procrastination"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
+                        <li><span class="type">Project</span>Recipe Page (WordPress)</li>
+                        <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
                     </ul>
                 </div>
 
@@ -36,21 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Blocks for Layout</li>
+                            <li><span class="type">Project</span>Recipe Page (WordPress)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Anchors and Internal links</li>
+                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
+                            <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
+                            <li><span class="type">Project</span>Recipe Page (WordPress) [cont.]</li>
                         </ul>
                     </div>
                 </div>
