--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 7th</h1>
-            <h3>Week 20 Day 1 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for August 8th</h1>
+            <h3>Week 20 Day 2 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            <li>What is your go-to comfort food?</li>
-
-                        </li>
+                        <li>What is your favorite restaurant?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-red">
                         <img 
-                            src="images/feelingsnacky.jpg"
-                            alt="feeling snacky"
+                            src="images/pho-fox.webp"
+                            alt="pho-fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Intro to WordPress</li>
-                        <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
+                        <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
+                        <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
                     </ul>
                 </div>
 
@@ -37,22 +34,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to WordPress</li>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Custom Menus</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation [cont.]</li>
+                            <li><span class="type">Demo</span>Column Blocks for Spacing, and Row Group Blocks</li>
+                            <li><span class="type">Demo</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Replicating Raycon - About Us</li>
+                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
                         </ul>
                     </div>
                 </div>
