--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 8th</h1>
-            <h3>Week 20 Day 2 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for August 11th</h1>
+            <h3>Week 20 Day 3 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
+                        <li>What is your favorite snack food/dessert?</li>
+
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/snacks.webp"
+                            alt="snack panda"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
-                        <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
+                        <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                     </ul>
                 </div>
 
@@ -34,23 +34,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Custom Menus</li>
+                            <li><span class="type">Demo</span>Google Fonts Plugin</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Column Blocks for Spacing, and Row Group Blocks</li>
-                            <li><span class="type">Demo</span>Backing up your WordPress Site</li>
-                            <li><span class="type">Extra Credit</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Replicating Raycon - Deals</li>
+                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
