--- a/cookbook/examples/random-facts/index.html
+++ b/cookbook/examples/random-facts/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Random Facts Sheet | Exercise Example</title>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Welcome to My Random Fact Sheet</h1>
