--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 12th</h1>
-            <h3>Week 20 Day 4 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for August 13th</h1>
+            <h3>Week 20 Day 5 (Customizing WordPress)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite genre of story to read?</li>
+                        <li>What is one of your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/books_happy_place.jpg"
-                            alt="books happy place"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
+                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                        <li><span class="type">Survey</span>Customizing CMS Wrap Up</li>
                     </ul>
                 </div>
 
@@ -33,21 +34,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Classic Themes vs Block Themes</li>
+                            <li><span class="type">Demo</span>Homepage Settings</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Foxtail Farms Site - Project Checkpoint (Technology Page) [cont.]</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Survey</span>Customizing CMS Wrap Up</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                 </div>
