--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 13th</h1>
-            <h3>Week 20 Day 5 (Customizing WordPress)</h3>
+            <h1>GDWD 105 - Agenda for August 14th</h1>
+            <h3>Week 21 Day 1 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What would your spirit animal be?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/spirit-animal-0.jpg"
+                            alt="spirit animal"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
-                        <li><span class="type">Survey</span>Customizing CMS Wrap Up</li>
+                        <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
+                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                     </ul>
                 </div>
 
@@ -34,24 +34,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Homepage Settings</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Powerpoint</span>General Web Development</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
-                            <li><span class="type">Survey</span>Customizing CMS Wrap Up</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
                         </ul>
                     </div>
                 </div>
