--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 14th</h1>
-            <h3>Week 21 Day 1 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 15th</h1>
+            <h3>Week 21 Day 2 (Intro to HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both? or neither?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="cats vs dogs"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
-                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -34,22 +33,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Domains, Hosting, and Website Creation</li>
-                            <li><span class="type">Powerpoint</span>General Web Development</li>
+                            <li><span class="type">Powerpoint</span>Introduction to GitHub</li>
+                            <li><span class="type">Powerpoint</span>Intro to HTML</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                            <li><span class="type">Powerpoint</span>HTML Tags and Elements</li>
+                            <li><span class="type">Demo</span>Hello World</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
+                            <li><span class="type">Demo</span>Basic HTML Elements</li>
                         </ul>
                     </div>
                 </div>
