--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 20th</h1>
-            <h3>Week 21 Day 5 (Intro to HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 21st</h1>
+            <h3>Week 22 Day 1 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is (or was) your favorite breakfast cereal?</li>
+                        <li>What is a hobby you do in your free time?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/kamehamehos.jpeg"
-                            alt="kamehamehos"
+                            src="images/cosplay.jpeg"
+                            alt="cosplay"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
-                        <li><span class="type">Project</span>Wiki Page (Code)</li>
+                        <li><span class="type">Quiz</span>Intro to HTML</li>
+                        <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
                     </ul>
                 </div>
 
@@ -34,25 +34,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Intro to HTML Attributes</li>
-                            <li><span class="type">Demo</span>Image Elements</li>
+                            <li><span class="type">Quiz</span>Intro to HTML</li>
+                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Clean Code Part 2</li>
-                        <li><span class="type">Project</span>Wiki Page (Code)</li>
+                            <li><span class="type">Demo</span>External Anchors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li> 
-                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
-                            <li><span class="type">Project</span>Wiki Page (Code) [cont.]</li>
+                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
                         </ul>
                     </div>
                 </div>
