--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 21st</h1>
-            <h3>Week 22 Day 1 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 22nd</h1>
+            <h3>Week 22 Day 2 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is a hobby you do in your free time?</li>
+                        <li>Do you see the glass as half empty or half full?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space ash-gray">
                         <img 
-                            src="images/cosplay.jpeg"
-                            alt="cosplay"
+                            src="images/good-day.webp"
+                            alt="good day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Intro to HTML</li>
-                        <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
+                        <li><span class="type">Exercise</span>Mystery Boxes</li>
                     </ul>
                 </div>
 
@@ -34,22 +33,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to HTML</li>
-                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
+                            <li><span class="type">Kahoot</span>HTML Indentation Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>External Anchors</li>
+                            <li><span class="type">Demo</span>Internal Anchors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
+                            <li><span class="type">Exercise</span>Mystery Boxes</li>
                         </ul>
                     </div>
                 </div>
