--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 22nd</h1>
-            <h3>Week 22 Day 2 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 25th</h1>
+            <h3>Week 22 Day 3 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Do you see the glass as half empty or half full?</li>
+                        <li>What was one of your favorite Saturday morning cartoons growing up?</li>
                     </ul>
-                    <div class="img-container more-space ash-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/good-day.webp"
-                            alt="good day"
+                            src="images/atla_cartoon.jpg"
+                            alt="avatar last airbender animals"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Mystery Boxes</li>
+                        <li><span class="type">Exercise</span>HTML Project Warm-up</li>
+                        <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint</li>
                     </ul>
                 </div>
 
@@ -33,21 +34,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review</li>
+                            <li><span class="type">Exercise</span>HTML Project Warm-up</li>
+                            <li><span class="type">Demo</span>Font Awesome Icon Library</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Internal Anchors</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Mystery Boxes</li>
+                            <li><span class="type">Extra Credit</span>HTML Potluck Project - Cookbook Checkpoint [cont.]</li>
                         </ul>
                     </div>
                 </div>
