--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 27th</h1>
-            <h3>Week 22 Day 5 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for August 28th</h1>
+            <h3>Week 23 Day 1 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite Pixar movies?</li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container">
                         <img 
-                            src="images/inside-out.jpg"
-                            alt="feelings"
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck (Complete)</li>
-                        <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
+                        <li><span class="type">Quiz</span>Intermediate HTML</li>
+                        <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
                     </ul>
                 </div>
 
@@ -34,23 +34,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (Complete)</li>
+                            <li><span class="type">Quiz</span>Intermediate HTML</li>
+                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (Complete) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties [cont.]</li>
+                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
-                            <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
-                            <li><span class="type">Project</span>HTML Potluck (Complete) [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
                         </ul>
                     </div>
                 </div>
