--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,60 +7,51 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 17th</h1>
-            <h3>Week 25 Day 4 (Advanced CSS - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for September 18th</h1>
+            <h3>Week 25 Day 5 (Advanced CSS - Flexbox)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have a perfect photographic memory 
+                            or a perfect echoic memory?
                         </li>
-
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Site Scaffolding</li>
+                        <li><span class="type">Project</span>Mebay Product Page</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Warm-up (6pm-6:10pm)</h3>
-                        <ul>
-                            <li>
-                                <span class="type">Video</span>
-                                <a href="https://www.youtube.com/watch?v=XfS-bZ69p0E">
-                                    Constitution Day
-                                </a>
-                            </li>
-                        </ul>
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Page Layouts - Two Columns</li>
-                            <li><span class="type">Demo</span>Two Columns w/ Sidebar</li>
+                            <li><span class="type">Project</span>Mebay Product Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Columns w/ Sidebar (Fancy)</li>
+                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Blog with Sidebar</li>
+                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
+                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
                         </ul>
                     </div>
                 </div>
